@@ -1,4 +1,5 @@
 _build/build.config.php
+_build/build.properties.php
 config.core.php
 .idea
 nbproject
